--- a/vue/src/style/base/_color.scss
+++ b/vue/src/style/base/_color.scss
@@ -1,5 +1,5 @@
-$base-color: #1A992F;         // 主体颜色
-$base-orange: #FE8C09;        // 橙色
+$base-color: #0088cc;         // 主体颜色
+$base-orange: #ff0000;        // 橙色
 
 
 // 字体颜色
