--- a/vue/src/style/base/_color.scss
+++ b/vue/src/style/base/_color.scss
@@ -5,6 +5,6 @@ $base-font-color: #666;
  // 灰色背景颜色  
 $base-background-color: #f1f1e3;       
 // 边框颜色
-$base-border-color: #EDEDED; 
+$base-border-color: #d2cdcd; 
 
 
